turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;
var I=0
val STOP=0
val PASDEVIRAGE=1
val GAUCHE=2
val DEMITOUR=4
val DROITE=8

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
	for (i<-0 to colors.length-1) {
		if (getCouleurSol()==colors(i)) {
			I=i
		}
	}
	if (rule(I)=='L') {
		gauche();
	} else if (rule(I)=='R') {
		droite();
	}
	setCouleurSol(colors((I+1)%colors.length));
	avance();
}

def setCouleurSol(c:Color) {
	setCouleurBrosse(c:Color);
	baisseBrosse();
	leveBrosse();
	}
